@@ -1,5 +1,11 @@
 2018-04-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/txt.c (WriteTXTImage): Optimize the progress indicator
+	since it is very inefficient with a large number of scenes and
+	oss-fuzz 7090 "graphicsmagick/coder_TEXT_fuzzer: Timeout in
+	graphicsmagick_coder_TEXT_fuzzer" consistently shows
+	GetImageListLength() in its stack traces.
+
 	* coders/dcm.c (ReadDCMImage): DICOM reader was no longer
 	immediately quitting with excessive samples per pixel.  This
 	caused spinning for a very long time when reading planar images
